--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "gulpfile.js",
   "scripts": {
+    "ci": "npm install",
     "start": "gulp --development",
     "build": "gulp build --production"
   },
