--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - uses: actions/setup-node@v3
       - name: Install Dependencies
-        run: npm install
+        run: npm ci
         
       - name: Build the app
         run: npm run build
